@@ -1,6 +1,7 @@
 Revision history for Task-BeLike-KWAKWA
 
 {{$NEXT}}
+        - Add more modules (including notes on testing)
 
 0.01  2018-02-03 21:57:48 GMT
         - Initial release
